--- a/scripts/initial_data_explore.ipynb
+++ b/scripts/initial_data_explore.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "structural-cholesterol",
    "metadata": {},
    "source": [
     "### EDA notebook to explore the WiDS ICU mortality data."
@@ -10,22 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "major-roberts",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/analysis2/physionet_projects/icu_mortality'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load packages\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "os.chdir(\"/Users/abaghela/my_things/physionet_projects/icu_mortality/\")"
+    "os.chdir(\"/mnt/analysis2/physionet_projects/icu_mortality/\")\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "colored-brazil",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-period",
    "metadata": {},
    "source": [
     "Get some basic information about the dataset"
@@ -43,8 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "congressional-raise",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +82,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limited-classification",
    "metadata": {},
    "source": [
     "There are some very relevant severity scores and risk factors to plot. "
@@ -83,189 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "lined-motel",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['age',\n",
-       " 'bmi',\n",
-       " 'elective_surgery',\n",
-       " 'height',\n",
-       " 'pre_icu_los_days',\n",
-       " 'readmission_status',\n",
-       " 'weight',\n",
-       " 'albumin_apache',\n",
-       " 'apache_2_diagnosis',\n",
-       " 'apache_3j_diagnosis',\n",
-       " 'apache_post_operative',\n",
-       " 'arf_apache',\n",
-       " 'bilirubin_apache',\n",
-       " 'bun_apache',\n",
-       " 'creatinine_apache',\n",
-       " 'fio2_apache',\n",
-       " 'gcs_eyes_apache',\n",
-       " 'gcs_motor_apache',\n",
-       " 'gcs_unable_apache',\n",
-       " 'gcs_verbal_apache',\n",
-       " 'glucose_apache',\n",
-       " 'heart_rate_apache',\n",
-       " 'hematocrit_apache',\n",
-       " 'intubated_apache',\n",
-       " 'map_apache',\n",
-       " 'paco2_apache',\n",
-       " 'paco2_for_ph_apache',\n",
-       " 'pao2_apache',\n",
-       " 'ph_apache',\n",
-       " 'resprate_apache',\n",
-       " 'sodium_apache',\n",
-       " 'temp_apache',\n",
-       " 'urineoutput_apache',\n",
-       " 'ventilated_apache',\n",
-       " 'wbc_apache',\n",
-       " 'd1_diasbp_invasive_max',\n",
-       " 'd1_diasbp_invasive_min',\n",
-       " 'd1_diasbp_max',\n",
-       " 'd1_diasbp_min',\n",
-       " 'd1_diasbp_noninvasive_max',\n",
-       " 'd1_diasbp_noninvasive_min',\n",
-       " 'd1_heartrate_max',\n",
-       " 'd1_heartrate_min',\n",
-       " 'd1_mbp_invasive_max',\n",
-       " 'd1_mbp_invasive_min',\n",
-       " 'd1_mbp_max',\n",
-       " 'd1_mbp_min',\n",
-       " 'd1_mbp_noninvasive_max',\n",
-       " 'd1_mbp_noninvasive_min',\n",
-       " 'd1_resprate_max',\n",
-       " 'd1_resprate_min',\n",
-       " 'd1_spo2_max',\n",
-       " 'd1_spo2_min',\n",
-       " 'd1_sysbp_invasive_max',\n",
-       " 'd1_sysbp_invasive_min',\n",
-       " 'd1_sysbp_max',\n",
-       " 'd1_sysbp_min',\n",
-       " 'd1_sysbp_noninvasive_max',\n",
-       " 'd1_sysbp_noninvasive_min',\n",
-       " 'd1_temp_max',\n",
-       " 'd1_temp_min',\n",
-       " 'h1_diasbp_invasive_max',\n",
-       " 'h1_diasbp_invasive_min',\n",
-       " 'h1_diasbp_max',\n",
-       " 'h1_diasbp_min',\n",
-       " 'h1_diasbp_noninvasive_max',\n",
-       " 'h1_diasbp_noninvasive_min',\n",
-       " 'h1_heartrate_max',\n",
-       " 'h1_heartrate_min',\n",
-       " 'h1_mbp_invasive_max',\n",
-       " 'h1_mbp_invasive_min',\n",
-       " 'h1_mbp_max',\n",
-       " 'h1_mbp_min',\n",
-       " 'h1_mbp_noninvasive_max',\n",
-       " 'h1_mbp_noninvasive_min',\n",
-       " 'h1_resprate_max',\n",
-       " 'h1_resprate_min',\n",
-       " 'h1_spo2_max',\n",
-       " 'h1_spo2_min',\n",
-       " 'h1_sysbp_invasive_max',\n",
-       " 'h1_sysbp_invasive_min',\n",
-       " 'h1_sysbp_max',\n",
-       " 'h1_sysbp_min',\n",
-       " 'h1_sysbp_noninvasive_max',\n",
-       " 'h1_sysbp_noninvasive_min',\n",
-       " 'h1_temp_max',\n",
-       " 'h1_temp_min',\n",
-       " 'd1_albumin_max',\n",
-       " 'd1_albumin_min',\n",
-       " 'd1_bilirubin_max',\n",
-       " 'd1_bilirubin_min',\n",
-       " 'd1_bun_max',\n",
-       " 'd1_bun_min',\n",
-       " 'd1_calcium_max',\n",
-       " 'd1_calcium_min',\n",
-       " 'd1_creatinine_max',\n",
-       " 'd1_creatinine_min',\n",
-       " 'd1_glucose_max',\n",
-       " 'd1_glucose_min',\n",
-       " 'd1_hco3_max',\n",
-       " 'd1_hco3_min',\n",
-       " 'd1_hemaglobin_max',\n",
-       " 'd1_hemaglobin_min',\n",
-       " 'd1_hematocrit_max',\n",
-       " 'd1_hematocrit_min',\n",
-       " 'd1_inr_max',\n",
-       " 'd1_inr_min',\n",
-       " 'd1_lactate_max',\n",
-       " 'd1_lactate_min',\n",
-       " 'd1_platelets_max',\n",
-       " 'd1_platelets_min',\n",
-       " 'd1_potassium_max',\n",
-       " 'd1_potassium_min',\n",
-       " 'd1_sodium_max',\n",
-       " 'd1_sodium_min',\n",
-       " 'd1_wbc_max',\n",
-       " 'd1_wbc_min',\n",
-       " 'h1_albumin_max',\n",
-       " 'h1_albumin_min',\n",
-       " 'h1_bilirubin_max',\n",
-       " 'h1_bilirubin_min',\n",
-       " 'h1_bun_max',\n",
-       " 'h1_bun_min',\n",
-       " 'h1_calcium_max',\n",
-       " 'h1_calcium_min',\n",
-       " 'h1_creatinine_max',\n",
-       " 'h1_creatinine_min',\n",
-       " 'h1_glucose_max',\n",
-       " 'h1_glucose_min',\n",
-       " 'h1_hco3_max',\n",
-       " 'h1_hco3_min',\n",
-       " 'h1_hemaglobin_max',\n",
-       " 'h1_hemaglobin_min',\n",
-       " 'h1_hematocrit_max',\n",
-       " 'h1_hematocrit_min',\n",
-       " 'h1_inr_max',\n",
-       " 'h1_inr_min',\n",
-       " 'h1_lactate_max',\n",
-       " 'h1_lactate_min',\n",
-       " 'h1_platelets_max',\n",
-       " 'h1_platelets_min',\n",
-       " 'h1_potassium_max',\n",
-       " 'h1_potassium_min',\n",
-       " 'h1_sodium_max',\n",
-       " 'h1_sodium_min',\n",
-       " 'h1_wbc_max',\n",
-       " 'h1_wbc_min',\n",
-       " 'd1_arterial_pco2_max',\n",
-       " 'd1_arterial_pco2_min',\n",
-       " 'd1_arterial_ph_max',\n",
-       " 'd1_arterial_ph_min',\n",
-       " 'd1_arterial_po2_max',\n",
-       " 'd1_arterial_po2_min',\n",
-       " 'd1_pao2fio2ratio_max',\n",
-       " 'd1_pao2fio2ratio_min',\n",
-       " 'h1_arterial_pco2_max',\n",
-       " 'h1_arterial_pco2_min',\n",
-       " 'h1_arterial_ph_max',\n",
-       " 'h1_arterial_ph_min',\n",
-       " 'h1_arterial_po2_max',\n",
-       " 'h1_arterial_po2_min',\n",
-       " 'h1_pao2fio2ratio_max',\n",
-       " 'h1_pao2fio2ratio_min',\n",
-       " 'apache_4a_hospital_death_prob',\n",
-       " 'apache_4a_icu_death_prob',\n",
-       " 'aids',\n",
-       " 'cirrhosis',\n",
-       " 'diabetes_mellitus',\n",
-       " 'hepatic_failure',\n",
-       " 'immunosuppression',\n",
-       " 'leukemia',\n",
-       " 'lymphoma',\n",
-       " 'solid_tumor_with_metastasis']"
+       "Index(['age', 'bmi', 'elective_surgery', 'height', 'pre_icu_los_days',\n",
+       "       'readmission_status', 'weight', 'albumin_apache', 'apache_2_diagnosis',\n",
+       "       'apache_3j_diagnosis',\n",
+       "       ...\n",
+       "       'apache_4a_hospital_death_prob', 'apache_4a_icu_death_prob', 'aids',\n",
+       "       'cirrhosis', 'diabetes_mellitus', 'hepatic_failure',\n",
+       "       'immunosuppression', 'leukemia', 'lymphoma',\n",
+       "       'solid_tumor_with_metastasis'],\n",
+       "      dtype='object', length=173)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,117 +116,68 @@
     "numerics = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64']\n",
     "dat.drop(columns = [\"encounter_id\", 'patient_id', \"hospital_id\",'hospital_death', \"icu_id\"]).\\\n",
     "select_dtypes(include=numerics).\\\n",
-    "columns.tolist()\n"
+    "columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's plot some key clinical parameters and how they relate to mortality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "mathematical-writing",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat = dat.assign(hospital_death = ['survived' if a == 0 else 'died' for a in dat['hospital_death']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Caucasian           70684\n",
-       "African American     9547\n",
-       "Other/Unknown        4374\n",
-       "Hispanic             3796\n",
-       "Asian                1129\n",
-       "Native American       788\n",
-       "Name: ethnicity, dtype: int64"
+       "0        survived\n",
+       "1        survived\n",
+       "2        survived\n",
+       "3        survived\n",
+       "4        survived\n",
+       "           ...   \n",
+       "91708    survived\n",
+       "91709    survived\n",
+       "91710    survived\n",
+       "91711    survived\n",
+       "91712    survived\n",
+       "Name: hospital_death, Length: 91713, dtype: object"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dat[\"ethnicity\"].value_counts()"
+    "dat[\"hospital_death\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "caring-square",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        0\n",
-       "1        0\n",
-       "2        0\n",
-       "3        0\n",
-       "4        0\n",
-       "        ..\n",
-       "91708    0\n",
-       "91709    0\n",
-       "91710    0\n",
-       "91711    0\n",
-       "91712    0\n",
-       "Name: hospital_death, Length: 91713, dtype: object"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "russian-detail",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "jewish-michael",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "south-proposal",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "cheap-pasta",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'shape' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-8ae9a22b4037>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'shape' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "modified-likelihood",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Remove patients with missing data \n",
+    "\n",
+    "# Impute\n",
+    "\n",
+    "# Model"
+   ]
   }
  ],
  "metadata": {
@@ -404,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
